infra/k8s/event-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: shubhamgupta1096/event-bus
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  selector:
    app: event-bus # which service will it the cluter ip services to
  type: ClusterIP # This is optional because it we don't provide this kubernets will be default use the ClusterIP service
  ports:
    - name: event-bus
      protocol: TCP
      port: 4005
      targetPort: 4005
