infra/k8s/posts-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-srv
spec:
  type: NodePort
  selector:
    app: posts #This also tells this service which pods to take care of. This is exact same tag (and should be) we gave in depl file
  ports:
    - name: posts
      protocol: TCP
      port: 4000 # Port of the Node port service. (Nodeport will accept the traffic on 4000 port and then redirect to targetPort)
      targetPort: 4000 # Actual port on which our application is listening traffic to inside the container
      # port and targetPort doesn't have to be same, but are kept same for the sake of simplicity. but can be different if
      # there is not other option for eg, one of the port is busy with other operation
